# epochix

./: .dockerignore  .epochix.yaml  .gitattributes  .gitignore  .lighthouserc.json  .model-story.yaml  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  TASKS.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/actions/epochix/: action.yml
.github/actions/model-story/: action.yml
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  release.yml  vscode-release.yml
design/: real-activations.md
docs/: api.md  deployment.md  index.md  parsers.md  plugins.md  quickstart.md
epochix-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.test.json
epochix-vscode/src/: config.ts  extension.ts  statusBar.ts
epochix-vscode/src/commands/: compareRuns.ts  exportRun.ts  openDashboard.ts  openLogFile.ts  tryDemo.ts  watchTerminal.ts
epochix-vscode/src/parsers/: base.ts  huggingface.ts  keras.ts  pytorchLightning.ts  universal.ts  yolo.ts
epochix-vscode/src/sidecar/: HealthCheck.ts  ServerManager.ts  which.ts
epochix-vscode/src/story/: grader.ts  narrator.ts  phases.ts
epochix-vscode/src/terminal/: TerminalFeed.ts  TerminalWatcher.ts  TrainingDetector.ts
epochix-vscode/src/test/: runTest.ts
epochix-vscode/src/webview/: DashboardPanel.ts  StandaloneEngine.ts  messages.ts  webview.html.ts
frontend/: index.html  package-lock.json  package.json  vite.config.js  vite.singlefile.config.js  vite.webview.config.js  vitest.config.js
frontend/src/: main.js  sse-client.js  store.js  viz-util.js  vscode-bridge.js  ws-client.js
frontend/src/i18n/: apply.js  en.json  fa.json  fr.json
frontend/src/panels/: HeroPanel.js  JourneyPanel.js  SkillsPanel.js  TechPanel.js
frontend/src/tests/: i18n-apply.test.js  store.test.js  viz-util.test.js  ws-client.test.js
frontend/src/themes/: base.css  dark.css  light.css
frontend/src/visualizations/: BrainCanvas.js  CompareView.js  ConfidenceBars.js  Distributions.js  Educational.js  EpochScrubber.js  GradeArcChart.js  GradeCard.js  ImprovementWaterfall.js  LearningMeter.js  ParticleField.js  PhaseJourney.js  SkillRadar.js  TimelineStory.js  TrainingDiagnostics.js
model-story-vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.config.mjs  package-lock.json  package.json  tsconfig.json
model-story-vscode/src/: config.ts  extension.ts  statusBar.ts
model-story-vscode/src/commands/: exportRun.ts  openDashboard.ts  openLogFile.ts  watchTerminal.ts
model-story-vscode/src/parsers/: base.ts  huggingface.ts  keras.ts  pytorchLightning.ts  universal.ts  yolo.ts
model-story-vscode/src/sidecar/: HealthCheck.ts  PortAllocator.ts  ServerManager.ts
model-story-vscode/src/story/: grader.ts  narrator.ts  phases.ts
model-story-vscode/src/terminal/: TerminalWatcher.ts  TrainingDetector.ts
model-story-vscode/src/webview/: DashboardPanel.ts  webview.html.ts
scripts/: _gen_i18n_templates.py  _gen_templates.py  benchmark-parsers.py  gazecapture_to_yolo.py  generate-fake-log.py  live_demo.py  python-to-ts-parser.py  update-vendored-frontend.sh  yolo_live_demo.py
src/epochix/: __init__.py  __main__.py  cli.py  config.py  enums.py  models.py  pipeline.py
src/epochix/_artifacts/: epochix.artifact.jsx
src/epochix/exporters/: __init__.py  html_export.py  json_export.py  markdown_export.py  pdf_export.py
src/epochix/ingester/: __init__.py  file_batch.py  file_tail.py  sdk_receiver.py  ssh.py  stdin.py
src/epochix/integrations/: __init__.py  hf.py  jupyter.py  lightning.py  tensorboard_import.py  wandb_import.py
src/epochix/normalizer/: __init__.py  canonical_keys.py  units.py
src/epochix/parsers/: __init__.py  accelerate.py  architecture_parser.py  base.py  fastai.py  huggingface.py  keras_tensorflow.py  llm_fallback.py  pytorch_lightning.py  registry.py  ultralytics_yolo.py  universal.py
src/epochix/plugins/: __init__.py  exporter_registry.py  metaphor_loader.py  task_registry.py
src/epochix/sdk/: __init__.py  activations.py  architecture.py  compare.py  export.py  live_reporter.py  parse.py  visualize.py
src/epochix/server/: __init__.py  app.py  auth.py  hub.py  jsonsafe.py  routes_export.py  routes_runs.py  routes_snapshot.py  sse.py  ws.py
src/epochix/store/: __init__.py  sqlite_store.py
src/epochix/story_engine/: __init__.py  config_loader.py  grade.py  milestones.py  narrator.py  phases.py  task_classifier.py  warnings.py
src/model_story/: __init__.py  cli.py  config.py  models.py  pipeline.py
src/model_story/_artifacts/: model-story.artifact.jsx
src/model_story/exporters/: html_export.py  json_export.py  markdown_export.py  pdf_export.py
src/model_story/ingester/: __init__.py  file_batch.py  file_tail.py  sdk_receiver.py  ssh.py  stdin.py
src/model_story/integrations/: __init__.py  hf.py  jupyter.py  lightning.py  tensorboard_import.py  wandb_import.py
src/model_story/normalizer/: __init__.py  canonical_keys.py  units.py
src/model_story/parsers/: __init__.py  accelerate.py  architecture_parser.py  base.py  fastai.py  huggingface.py  keras_tensorflow.py  llm_fallback.py  pytorch_lightning.py  (+3 more)
tests/benchmarks/: test_parser_throughput.py  test_store_throughput.py
tests/browser/: test_dashboard_render.py
tests/e2e/: test_full_pipeline.py
tests/integration/: test_api.py  test_export.py  test_framework_callbacks.py  test_importers.py  test_ingester_cleanup.py  test_jupyter_magic.py  test_live_activations.py  test_live_idle_sniff.py  test_llm_fallback.py  test_nonfinite_robustness.py  test_real_yolo_log.py  test_security.py  test_ws.py
tests/unit/: test_activations_sdk.py  test_architecture_parser.py  test_architecture_sdk.py  test_cli.py  test_custom_loss_grade.py  test_fuzz_parsers.py  test_grade_config.py  test_hub.py  test_ingester.py  test_models.py  test_narrative_i18n.py  test_normalizer.py  test_parser_redos.py  test_parsers.py  test_plugins.py  test_server.py  test_ssh_ingester.py  test_store.py  test_story_engine.py
(+156 files in other folders)
